names changed and better layout

--- a/index.html
+++ b/index.html
@@ -168,23 +168,38 @@
 
     <!-- Main content -->
     <div class="image-container">
-        <img src="S (4  ).jpg" alt="Main Image">
+        <img src="S (4).jpg" alt="Main Image">
     </div>
 
     <div class="three-images">
+        <img src="S (7).jpg" alt="Image 2">
         <img src="S (12).jpg" alt="Image 2">
-        <img src="S (6).jpg" alt="Image 2">
-        <img src="S (7).jpg" alt="Image 3">
+        <img src="S (6).jpg" alt="Image 3">
     </div>
 
     <div class="split-images">
-        <img src="S (2).jpg" alt="Split Image 1">
-        <img src="S (23).jpg" alt="Split Image 2">
+        <img src="S (0).jpg" alt="Split Image 1">
+        <img src="S (5).jpg" alt="Split Image 2">
     </div>
 
     <div class="image-container">
         <img src="S (1).jpg" alt="Main Image">
     </div>
+
+    <div class="split-images">
+        <img src="S (9).jpg" alt="Split Image 1">
+        <img src="S (23).jpg" alt="Split Image 2">
+    </div>
+
+    <div class="image-container">
+        <img src="S (2).jpg" alt="Main Image">
+    </div>
+
+    <div class="split-images">
+        <img src="S (24).jpeg" alt="Split Image 1">
+        <img src="S (25).jpeg" alt="Split Image 2">
+    </div>
+
 
 
     <script>
