--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@
         <img src="S (6).jpg" alt="Image 3">
     </div>
 
-    <div class="split-images">
-        <img src="S (0).jpg" alt="Split Image 1">
-        <img src="S (5).jpg" alt="Split Image 2">
-    </div>
 
     <div class="image-container">
         <img src="S (1).jpg" alt="Main Image">
@@ -188,11 +184,11 @@
 
     <div class="split-images">
         <img src="S (9).jpg" alt="Split Image 1">
-        <img src="S (23).jpg" alt="Split Image 2">
+        <img src="S (2).jpg" alt="Split Image 2">
     </div>
 
     <div class="image-container">
-        <img src="S (2).jpg" alt="Main Image">
+        <img src="S (5).jpg" alt="Main Image">
     </div>
 
     <div class="split-images">
@@ -200,7 +196,9 @@
         <img src="S (25).jpeg" alt="Split Image 2">
     </div>
 
-
+    <div class="image-container">
+        <img src="S (0).jpg" alt="Split Image 1">
+    </div>
 
     <script>
         const menuContainer = document.getElementById('menuContainer');
